tests/fixtures/errors/field_list_arg_view_conflict.z
# E0200: a path-shaped call argument borrows its source path for the call
# scope, so passing the container while an element view of it is live is a
# conflict -- the call may grow the list and dangle the view.
Box: class {
    n: u64
}

Prog: class {
    units: (List Box)
}

clobber: function {xs: List Box} is {
    i: u64
    for i < 64 loop {
        xs.append (Box n: i)
        i = i + 1
    }
}

main: function is {
    p: (Prog units: (List Box))
    p.units.append (Box n: 1)
    e: p.units.get i: 0
    clobber xs: p.units
    print "n=\{e.n}"
}
